team3/Backend/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: your-dockerhub-username/appointment-service:latest
          ports:
            - containerPort: 5000
