team3/Backend/appointment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-ingress
spec:
  rules:
    - host: appointment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
